force-app/main/default/objects/Contact/fields/Inactive_reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_reason__c</fullName>
    <label>Inactive reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>