force-app/main/default/objects/Contact/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <description>When  user Converted to community member ,member status is set to Active.</description>
    <label>Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>