force-app/main/default/objects/Contact/recordTypes/Community_Member.recordType-meta.xml
<RecordType>
    <fullName>Community_Member</fullName>
    <active>true</active>
    <description>Details of Approved Community Memer data</description>
    <label>Community Member</label>
</RecordType>