force-app/main/default/objects/Contact/validationRules/Inactive_Date_Visibility.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Date_Visibility</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Member_Status__c , &apos;InActive&apos;) &amp;&amp; ISCHANGED( Inactive_Date__c )&amp;&amp; NOT(ISNEW()) &amp;&amp;   NOT(ISBLANK(PRIORVALUE(Inactive_Date__c )))</errorConditionFormula>
    <errorDisplayField>Inactive_Date__c</errorDisplayField>
    <errorMessage>InActive Date Cannot be editted</errorMessage>
</ValidationRule>