force-app/main/default/objects/Contact/validationRules/Inactive_reason_visibility.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_reason_visibility</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Member_Status__c , &apos;InActive&apos;) &amp;&amp;  ISCHANGED( Inactive_reason__c ) &amp;&amp;  NOT(ISNEW()) &amp;&amp;  PRIORVALUE(Inactive_reason__c ) &lt;&gt; null</errorConditionFormula>
    <errorDisplayField>Inactive_reason__c</errorDisplayField>
    <errorMessage>Inactive Reason field cannot be edited</errorMessage>
</ValidationRule>