force-app/main/default/objects/Contact/listViews/Community_Member.listView-meta.xml
<ListView>
    <fullName>Community_Member</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Annual_Income__c</columns>
    <columns>Member_Status__c</columns>
    <columns>Inactive_reason__c</columns>
    <columns>Inactive_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Community_Member</value>
    </filters>
    <label>Community Member</label>
</ListView>