force-app/main/default/objects/Contact/listViews/Volunteer.listView-meta.xml
<ListView>
    <fullName>Volunteer</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Volunteer</value>
    </filters>
    <label>Volunteer</label>
</ListView>